--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.thymeleaf.suffix=.html
 logging.level.org.springframework.security=DEBUG
 server.port=8083
 server.error.whitelabel.enabled=false
-spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
